{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 751,
  "lineage": "321863e1-c0dc-96a8-2d26-219bc991129f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590184137042:loadbalancer/web-elb",
            "availability_zones": [
              "eu-north-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-852903253.eu-north-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 5,
                "interval": 30,
                "target": "HTTP:9100/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "instances": [
              "i-021146d30ed4d0bb4",
              "i-07dbd8124bc1874cb"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "HTTP",
                "lb_port": 3000,
                "lb_protocol": "HTTP"
              },
              {
                "instance_port": 9090,
                "instance_protocol": "HTTP",
                "lb_port": 9090,
                "lb_protocol": "HTTP"
              },
              {
                "instance_port": 9100,
                "instance_protocol": "HTTP",
                "lb_port": 9100,
                "lb_protocol": "HTTP"
              },
              {
                "instance_port": 9101,
                "instance_protocol": "HTTP",
                "lb_port": 9101,
                "lb_protocol": "HTTP"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-05b08b303f3adbf11"
            ],
            "source_security_group": "590184137042/volodymyr-sg",
            "source_security_group_id": "sg-05b08b303f3adbf11",
            "subnets": [
              "subnet-0dd00d86e2526b559"
            ],
            "tags": {
              "Name": "web-elb"
            },
            "tags_all": {
              "Name": "web-elb"
            },
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_instance.first_ec2",
            "aws_instance.secon_ec2",
            "aws_security_group.ec2",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617128955c512af7",
            "arn": "arn:aws:ec2:eu-north-1:590184137042:instance/i-021146d30ed4d0bb4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021146d30ed4d0bb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "steamus500",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ca3fc821ff0cd34",
            "private_dns": "ip-10-0-101-90.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.90",
            "public_dns": "ec2-16-170-223-155.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.223.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c5a70d791fa0bc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd00d86e2526b559",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b08b303f3adbf11"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "secon_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617128955c512af7",
            "arn": "arn:aws:ec2:eu-north-1:590184137042:instance/i-07dbd8124bc1874cb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07dbd8124bc1874cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "steamus500",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0adc170446d583704",
            "private_dns": "ip-10-0-101-254.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.254",
            "public_dns": "ec2-13-49-76-45.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.76.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d80d4f8aef46dd13",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd00d86e2526b559",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b08b303f3adbf11"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "three_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617128955c512af7",
            "arn": "arn:aws:ec2:eu-north-1:590184137042:instance/i-03afa89e4ba543659",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03afa89e4ba543659",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "steamus500",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af3baae216f31868",
            "private_dns": "ip-10-0-101-217.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.217",
            "public_dns": "ec2-13-60-59-114.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.59.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a75d3f627d4bb4c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd00d86e2526b559",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b08b303f3adbf11"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590184137042:security-group/sg-05b08b303f3adbf11",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b08b303f3adbf11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "volodymyr-sg",
            "name_prefix": "",
            "owner_id": "590184137042",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05f4d38947b23204d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590184137042:network-acl/acl-0055f48c59423663e",
            "default_network_acl_id": "acl-0055f48c59423663e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0055f48c59423663e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "590184137042",
            "subnet_ids": [
              "subnet-0dd00d86e2526b559"
            ],
            "tags": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-default",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "tags_all": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-default",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "vpc_id": "vpc-05f4d38947b23204d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590184137042:route-table/rtb-01ec886a79c41958d",
            "default_route_table_id": "rtb-01ec886a79c41958d",
            "id": "rtb-01ec886a79c41958d",
            "owner_id": "590184137042",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-default",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "tags_all": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-default",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05f4d38947b23204d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590184137042:security-group/sg-0103c0b8a9694b974",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0103c0b8a9694b974",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "590184137042",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-default",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "tags_all": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-default",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "vpc_id": "vpc-05f4d38947b23204d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590184137042:internet-gateway/igw-0d387cd6582afb9fa",
            "id": "igw-0d387cd6582afb9fa",
            "owner_id": "590184137042",
            "tags": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "tags_all": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "vpc_id": "vpc-05f4d38947b23204d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d387cd6582afb9fa",
            "id": "r-rtb-06d663c86a5d665931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06d663c86a5d66593",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590184137042:route-table/rtb-06d663c86a5d66593",
            "id": "rtb-06d663c86a5d66593",
            "owner_id": "590184137042",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-public",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "tags_all": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-public",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f4d38947b23204d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cbbeb0b1dbb4fe5",
            "route_table_id": "rtb-06d663c86a5d66593",
            "subnet_id": "subnet-0dd00d86e2526b559"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590184137042:subnet/subnet-0dd00d86e2526b559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd00d86e2526b559",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184137042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-public-eu-north-1a",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "tags_all": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module-public-eu-north-1a",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "vpc_id": "vpc-05f4d38947b23204d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590184137042:vpc/vpc-05f4d38947b23204d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0055f48c59423663e",
            "default_route_table_id": "rtb-01ec886a79c41958d",
            "default_security_group_id": "sg-0103c0b8a9694b974",
            "dhcp_options_id": "dopt-06b180b27ceb9c649",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f4d38947b23204d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ec886a79c41958d",
            "owner_id": "590184137042",
            "tags": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            },
            "tags_all": {
              "CreatedBy": "Volodymyr",
              "Name": "Volodymyr-vpc-module",
              "Owner": "Volodymyr",
              "Purpose": "step3"
            }
          }
        }
      ]
    }
  ]
}